--- a/docs/src/_styles/components.css
+++ b/docs/src/_styles/components.css
@@ -206,6 +206,16 @@
 }
 
 /* Forms */
+.form-step {
+  .form-hint { display: block; }
+  .form-error { display: none; }
+}
+.form-step.form-step__error {
+  .form-hint { display: none; }
+  .form-error { display: block; }
+  .form-control { border-color: #ed5a6a; }
+}
+
 .control-label {
   display: inline-block;
   margin-bottom: 4px;
