docs(hub): Plug apply form to the hub

--- a/docs/src/_includes/apply-form.pug
+++ b/docs/src/_includes/apply-form.pug
@@ -1,4 +1,4 @@
-form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", action="http://docsearch-hub.herokuapp.com/form/inbound", id="apply")
+form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", action="https://docsearch-hub.herokuapp.com/form/inbound", id="apply")
   .custom-form-content.form-content
     .mb-2.form-step(name="step-documentationUrl")
       label.control-label(for="documentationUrl") Documentation URL
