docs(form): Make github url optional

--- a/docs/src/_includes/apply-form.pug
+++ b/docs/src/_includes/apply-form.pug
@@ -10,7 +10,7 @@ form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", actio
       label.control-label(for="githubUrl") 
         |Repository url
         .inline.text--1.text-grey-1  (optional)
-      input#url.form-control(name="githubUrl", placeholder="https://github.com/username/project", type="url", required)  
+      input#url.form-control(name="githubUrl", placeholder="https://github.com/username/project", type="url")  
       p.form-hint.text-grey-1.text--1.leading-2.my-1.italic This is optional, but we'll give higher priority to open source requests
       p.form-error.text-mars-2.text--1.my-1.bold
 
